# digital-secretariat

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  install.conf.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
deployment/secretariat/: README.md  action-grants.sql  content-reader-grants.sql  deploy.sh  reader-grants.sql
docs/: ARCHITECTURE.md  INSTALLATION.md  LANGUAGE_POLICY.md  OPERATIONS.md  POSITIONING.md  SECURITY.md  SOURCE_PROVENANCE.md  SUBMISSION.md
docs/ai/: INSTALLATION_CONTRACT.md  INSTALLATION_LOG_TEMPLATE.md  INSTALLER_PROMPT.md  README.md  install-manifest.yaml
docs/video/: REMOTION_BRIEF.md  SHOT_LIST.md  VOICEOVER.md  VOICEOVER_EN.md  VOICEOVER_PL.md
email-templates/: standard.html
email-templates/rail/: missing_bank_statement.md  trial_end_invoice.md
migrations/manual/: 2026-07-12_mail_rail.sql  2026-07-19_email_measurement.sql  2026-07-21_inbound_reply.sql
scripts/: preflight.sh  verify-install.sh
scripts/sql/: add_email_drafts_revisions.sql
src/: __init__.py
src/database/: __init__.py  sync_connection.py
src/secretariat/: __init__.py  actions.py  app.py  auth.py  dashboard.py  database.py  mail_content.py  outreach.py  overview.py  schemas.py  web.py
systemd/: digital-secretariat-mail-cache.service.in  digital-secretariat-mail-cache.timer  digital-secretariat.service.in  tailscaled-secretariat.service
tests/: test_email_headers.py  test_mail_rail.py  test_smtp_gateway_measurement.py
video/: .gitignore  package-lock.json  package.json  remotion.config.ts
(+23 files in other folders)
