[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digital-secretariat"
version = "0.1.0"
description = "Private, auditable control plane for a small-company digital office"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.104,<1",
  "jinja2>=3.1,<4",
  "psycopg2-binary>=2.9,<3",
  "pydantic>=2.5,<3",
  "pyyaml>=6,<7",
  "requests>=2.31,<3",
  "sqlalchemy>=2,<3",
  "uvicorn[standard]>=0.24,<1",
]

[project.optional-dependencies]
dev = [
  "black>=24,<27",
  "httpx>=0.25,<1",
  "mypy>=1.6,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901", "UP006", "UP035", "UP045"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-config"]
pythonpath = ["."]
